# CAC-2026_Data-Challenge_Olive-Oil-Sensory-Defects-Detection-Using-Chemometrics

./: .gitignore  README.md  modeling_pipeline_description.md  pyproject.toml  requirements.txt
Notebooks/: 01_EDA.ipynb  02a_Classification_with_PLSDA.ipynb  02b_Classification_with_LDA.ipynb  02c_Classification_with_QDA.ipynb  02d_Classification_with_SVM.ipynb  02e_Classification_with_RandomForest.ipynb  02f_SVM_threshold_tuning.ipynb
src/olive_oil/: __init__.py  blocks.py  data.py  evaluation.py  models.py  outliers.py  preprocessing.py  visualization.py
tests/: conftest.py  test_data.py  test_preprocessing.py
