[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "olive-oil"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "openpyxl",
    "scikit-learn",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest"]
viz = ["matplotlib", "seaborn", "plotly"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require the real data file (Data/CAC2026_Data_challenge.xlsx)",
]